--- a/index.html
+++ b/index.html
@@ -164,8 +164,15 @@
                 <div class="card-title">今日油价</div>
                 <div class="card-desc">全国实时油价查询</div>
             </a>
+            <!-- 工具 2: 扫雷 -->
+            <a href="minesweeper.html" class="tool-card">
+                <div class="decoration-dot"></div>
+                <img src="minesweeper.png" alt="扫雷" class="card-icon-img">
+                <div class="card-title">扫雷</div>
+                <div class="card-desc">娱乐一下吧</div>
+            </a> 
 
-            <!-- 工具 2: 占位符 (你可以复制这个块添加更多工具) -->
+            <!-- 工具 3: 占位符 (你可以复制这个块添加更多工具) -->
             <!-- 
             <a href="#" class="tool-card">
                 <div class="decoration-dot"></div>
