--- a/oil-price.html
+++ b/oil-price.html
@@ -219,7 +219,7 @@
         </div>
 
         <div class="footer-tip">
-            <p>数据来源: mxnzp.com</p>
+            <!-- <p>数据来源: mxnzp.com</p> -->
             <p>仅供参考，请以当地加油站为准</p>
         </div>
     </div>
