--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <!-- 工具 : 更多 -->
             <a href="https://tool.browser.qq.com" class="tool-card">
                 <div class="decoration-dot"></div>
-                <img src="icon_more.png" alt="更多" class="card-icon-img">
+                <img src="icon_bangxiaomang.png" alt="更多" class="card-icon-img">
                 <div class="card-title">更多</div>
                 <div class="card-desc">更多</div>
             </a> 
