--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                 <div class="decoration-dot"></div>
                 <img src="icon_bangxiaomang.png" alt="更多" class="card-icon-img">
                 <div class="card-title">更多</div>
-                <div class="card-desc">更多</div>
+                <div class="card-desc">腾讯帮小忙在线工具箱</div>
             </a> 
         </div>
     </div>
