--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
                 <div class="card-title">水压套圈</div>
                 <div class="card-desc">娱乐一下吧</div>
             </a> 
+            <!-- 工具 4: 兽棋 -->
+            <a href="AnimalChess.html" class="tool-card">
+                <div class="decoration-dot"></div>
+                <img src="minesweeper.png" alt="兽棋" class="card-icon-img">
+                <div class="card-title">兽棋</div>
+                <div class="card-desc">娱乐一下吧</div>
+            </a> 
             <!-- 工具 3: 占位符 (你可以复制这个块添加更多工具) -->
             <!-- 
             <a href="#" class="tool-card">
