--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
 <script>
     // 工具数据结构
     const toolsData = [
+        { id: 0, title: "最热新闻", desc: "全网热搜",icon: "https://newsnow.busiyi.world/icon.svg", link: "https://newsnow.busiyi.world"},
         { id: 1, title: "今日油价", desc: "全国实时油价查询", icon: "icon_oil.png", link: "oil-price.html" },
         { id: 2, title: "扫雷", desc: "娱乐一下吧", icon: "minesweeper.png", link: "minesweeper.html" },
         { id: 3, title: "水压套圈", desc: "娱乐一下吧", icon: "minesweeper.png", link: "RetroWaterRingToss.html" },
