--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
         { title: "今日油价", desc: "全国实时油价查询", icon: "icon_oil.png", link: "oil-price.html" },
         { title: "五子棋", desc: "五子棋游戏", icon: "minesweeper.png", link: "gobang-game.html" },
         { title: "数独", desc: "神秘数字谜题", icon: "minesweeper.png", link: "sudoku.html" },
+        { title: "开关灯", desc: "益智游戏-开关灯", icon: "minesweeper.png", link: "switch.html" },
         { title: "扫雷", desc: "娱乐一下吧", icon: "minesweeper.png", link: "minesweeper.html" },
         { title: "水压套圈", desc: "娱乐一下吧", icon: "minesweeper.png", link: "RetroWaterRingToss.html" },
         { title: "兽棋", desc: "娱乐一下吧", icon: "minesweeper.png", link: "AnimalChess.html" },
