--- a/switch.html
+++ b/switch.html
@@ -6,76 +6,143 @@
 <title>LOGIC MATRIX</title>
 
 <style>
+/* ===== 全局 ===== */
 body{
     margin:0;
-    width: 100vw;
-    height: 100vh;
-    font-family: "Segoe UI", monospace;
-    background: radial-gradient(circle at top,#1a2a3a,#0d1117) 100%;
-    color:#fff;
+    width:100vw;
+    height:100vh;
+    overflow:hidden;
+    font-family:"Orbitron", "Segoe UI", monospace;
+    background:linear-gradient(160deg,#0a0f18,#0d1117 40%,#070b12);
+    color:#d7faff;
+    display:flex;
+    flex-direction:column;
 }
 
+/* 背景科技网格 */
+body::before{
+    content:"";
+    position:fixed;
+    inset:0;
+    background:
+        linear-gradient(rgba(0,255,255,0.05) 1px, transparent 1px),
+        linear-gradient(90deg, rgba(0,255,255,0.05) 1px, transparent 1px);
+    background-size:40px 40px;
+    pointer-events:none;
+}
+
+/* ===== 顶部面板 ===== */
+
 .header{
+    padding:15px;
     text-align:center;
-    padding:20px 10px;
+    border-bottom:1px solid rgba(0,255,255,0.2);
+    background:rgba(0,20,30,0.6);
+    backdrop-filter:blur(6px);
+    box-shadow:0 0 20px rgba(0,255,255,0.1);
 }
 
 .title{
-    font-size:24px;
-    color:#00e0ff;
+    font-size:22px;
+    letter-spacing:2px;
+    color:#00f7ff;
+    text-shadow:0 0 10px #00f7ff;
 }
 
 .stability{
-    font-size:36px;
+    font-size:34px;
+    margin-top:6px;
+    color:#00ffaa;
+    text-shadow:0 0 12px #00ffaa;
 }
 
 .level{
-    color:#aaa;
+    font-size:14px;
+    color:#89f7ff;
+    margin-top:4px;
 }
 
+/* 进度条 */
 .progress{
-    width:80%;
-    margin:10px auto;
-    height:8px;
-    background:#222;
+    width:70%;
+    margin:10px auto 0;
+    height:6px;
+    background:#0b1a22;
     border-radius:10px;
+    border:1px solid rgba(0,255,255,0.2);
     overflow:hidden;
 }
+
 .bar{
     height:100%;
     width:0%;
-    background:#00ffaa;
+    background:linear-gradient(90deg,#00ffaa,#00f7ff);
+    box-shadow:0 0 10px #00ffaa;
     transition:0.3s;
 }
 
+/* ===== 开关区域 ===== */
+
 .grid{
+    flex:1;
     display:grid;
-    gap:20px;
-    margin:30px auto;
-    max-width:800px;
-    grid-template-columns:repeat(auto-fit,minmax(70px,1fr));
+    grid-template-columns:repeat(4,1fr);
+    gap:22px;
+    padding:30px;
+    align-content:center;
 }
 
+/* 开关卡片 */
 .switch{
     text-align:center;
     cursor:pointer;
+    padding:clamp(8px,2vw,18px);
+    border:1px solid rgba(0,255,255,0.2);
+    border-radius:12px;
+    background:rgba(0,30,40,0.5);
+    backdrop-filter:blur(8px);
+    transition:0.25s;
+    position:relative;
 }
 
+/* 赛博边框效果 */
+.switch::before{
+    content:"";
+    position:absolute;
+    inset:0;
+    border-radius:12px;
+    padding:1px;
+    background:linear-gradient(45deg,#00ffaa,#00f7ff,#0088ff);
+    -webkit-mask:
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+    -webkit-mask-composite:xor;
+    mask-composite:exclude;
+    pointer-events:none;
+    opacity:0.2;
+}
+
+.switch:hover{
+    box-shadow:0 0 15px rgba(0,255,255,0.3);
+}
+
+/* 开关圆 */
 .circle{
-    width:65px;
-    height:65px;
+    width:clamp(50px,12vw,90px);
+    height:clamp(50px,12vw,90px);
     border-radius:50%;
     margin:auto;
-    transition:0.2s;
+    transition:0.25s;
 }
 
 .on{
-    background:#00ffaa;
-    box-shadow:0 0 20px #00ffaa;
+    background:radial-gradient(circle,#00ffaa,#007777);
+    box-shadow:0 0 18px #00ffaa;
 }
 
 .off{
-    background:#333;
+    background:#1a1f25;
+    border:1px solid #333;
 }
 
 .switch:active .circle{
@@ -83,35 +150,38 @@ body{
 }
 
 .label{
-    margin-top:6px;
+    margin-top:8px;
+    font-size:clamp(12px,2.5vw,16px);
+    letter-spacing:1px;
+    color:#00f7ff;
 }
 
+/* ===== 规则面板 ===== */
+
 .rules{
-    max-width:800px;
-    margin:20px 20px;
-    background:rgba(255,255,255,0.05);
+    margin:10px 20px 20px;
     padding:15px;
-    border-radius:10px;
+    border-radius:12px;
+    background:rgba(0,20,30,0.6);
+    backdrop-filter:blur(10px);
+    border:1px solid rgba(0,255,255,0.2);
+    max-height:28vh;
+    overflow:auto;
 }
 
 .rule{
-    padding:5px 0;
-    font-size:14px;
+    padding:4px 0;
+    font-size:13px;
     color:#00ffaa;
+    text-shadow:0 0 5px rgba(0,255,170,0.4);
 }
 
-button{
-    background:#00e0ff;
-    border:none;
-    padding:8px 14px;
-    border-radius:5px;
-    cursor:pointer;
-}
+/* ===== 弹窗 ===== */
 
 .modal{
     position:fixed;
     inset:0;
-    background:rgba(0,0,0,0.7);
+    background:rgba(0,0,0,0.8);
     display:flex;
     justify-content:center;
     align-items:center;
@@ -119,10 +189,34 @@ button{
 }
 
 .modal-content{
-    background:#111;
-    padding:30px;
-    border-radius:10px;
+    padding:30px 40px;
+    border-radius:14px;
+    background:rgba(0,20,30,0.9);
+    border:1px solid rgba(0,255,255,0.3);
+    box-shadow:0 0 30px rgba(0,255,255,0.2);
     text-align:center;
+}
+
+.modal-content h2{
+    color:#00ffaa;
+    text-shadow:0 0 12px #00ffaa;
+}
+
+button{
+    margin-top:15px;
+    padding:10px 20px;
+    border:none;
+    border-radius:8px;
+    cursor:pointer;
+    background:linear-gradient(90deg,#00ffaa,#00f7ff);
+    color:#000;
+    font-weight:bold;
+    letter-spacing:1px;
+    transition:0.2s;
+}
+
+button:hover{
+    box-shadow:0 0 12px #00ffaa;
 }
 </style>
 </head>
@@ -153,158 +247,125 @@ button{
 
 let level=1;
 let switches={};
-let solution={};
 let rules=[];
 let ruleText=[];
 let gameFinished=false;
 
-/* ===== 固定前5关 ===== */
+/* ========= 缓存机制 ========= */
 
-function loadFixedLevel(){
-
-    if(level===1){
-        switches={A:false,B:false,C:false};
-        solution={A:true,B:false,C:true};
-        rules=[
-            s=>s.A===true,
-            s=>s.C===true,
-            s=>s.B===false
-        ];
-        ruleText=[
-            "A 必须开启",
-            "C 必须开启",
-            "B 必须关闭"
-        ];
-    }
-
-    if(level===2){
-        switches={A:false,B:false,C:false,D:false};
-        solution={A:true,B:true,C:false,D:false};
-        rules=[
-            s=>s.A===s.B,
-            s=>s.C===false,
-            s=>s.D===false
-        ];
-        ruleText=[
-            "A 与 B 必须相同",
-            "C 必须关闭",
-            "D 必须关闭"
-        ];
-    }
-
-    if(level===3){
-        switches={A:false,B:false,C:false,D:false};
-        solution={A:true,B:false,C:true,D:false};
-        rules=[
-            s=>s.A!==s.B,
-            s=>s.C===true,
-            s=>s.D===false
-        ];
-        ruleText=[
-            "A 与 B 必须相反",
-            "C 必须开启",
-            "D 必须关闭"
-        ];
-    }
-
-    if(level===4){
-        switches={A:false,B:false,C:false,D:false,E:false};
-        solution={A:true,B:true,C:false,D:true,E:false};
-        rules=[
-            s=>!s.A || s.D===true,
-            s=>s.B===true,
-            s=>s.C===false,
-            s=>s.E===false
-        ];
-        ruleText=[
-            "如果 A 开启，则 D 必须开启",
-            "B 必须开启",
-            "C 必须关闭",
-            "E 必须关闭"
-        ];
-    }
-
-    if(level===5){
-        switches={A:false,B:false,C:false,D:false,E:false,F:false};
-        solution={A:true,B:false,C:true,D:false,E:true,F:false};
-        rules=[
-            s=>Object.values(s).filter(v=>v).length===3,
-            s=>s.A===true,
-            s=>s.C===true,
-            s=>s.E===true
-        ];
-        ruleText=[
-            "必须恰好有 3 个开启",
-            "A 必须开启",
-            "C 必须开启",
-            "E 必须开启"
-        ];
-    }
+function saveLevel(){
+    localStorage.setItem("logic_level", level);
 }
 
-/* ===== 随机 8 开关模式 ===== */
+function loadLevel(){
+    let saved=localStorage.getItem("logic_level");
+    if(saved){
+        level=parseInt(saved);
+    }else{
+        level=1;
+    }
+    document.getElementById("level").innerText=level;
+}
 
-function generateRandomLevel(){
+/* ========= 生成关卡 ========= */
 
-    const letters="ABCDEFGH".split("");
+function generateLevel(){
+
+    let switchCount, ruleCount, difficulty;
+
+    if(level<=2){
+        switchCount=4;
+        ruleCount=4;
+        difficulty="basic";
+    }
+    else if(level<=5){
+        switchCount=6;
+        ruleCount=6;
+        difficulty="inverse";
+    }
+    else if(level<=10){
+        switchCount=6;
+        ruleCount=6;
+        difficulty="mixed";
+    }
+    else{
+        switchCount=8;
+        ruleCount=8;
+        difficulty="hard";
+    }
+
+    const letters="ABCDEFGH".split("").slice(0,switchCount);
 
     let attempts=0;
-    let success=false;
 
-    while(attempts<400 && !success){
+    while(attempts<500){
 
         attempts++;
+
         switches={};
-        solution={};
         rules=[];
         ruleText=[];
+
+        let solution={};
 
         letters.forEach(l=>{
             switches[l]=false;
             solution[l]=Math.random()>0.5;
         });
 
-        let keys=letters;
+        while(rules.length<ruleCount){
 
-        let targetRuleCount=6+Math.floor(level/3);
+            let type;
 
-        while(rules.length<targetRuleCount){
-
-            let type=Math.floor(Math.random()*4);
+            if(difficulty==="basic"){
+                type=Math.random()<0.7?0:4;
+            }
+            else if(difficulty==="inverse"){
+                type=Math.random()<0.5?1:0;
+            }
+            else{
+                type=Math.floor(Math.random()*5);
+            }
 
             if(type===0){
-                let k=randomKey(keys);
+                let k=randomKey(letters);
                 let val=solution[k];
                 rules.push(s=>s[k]===val);
                 ruleText.push(k+" 必须"+(val?"开启":"关闭"));
             }
 
             if(type===1){
-                let [a,b]=randomPair(keys);
-                let same=solution[a]===solution[b];
-                rules.push(s=>(s[a]===s[b])===same);
-                ruleText.push(a+" 与 "+b+" 必须"+(same?"相同":"相反"));
+                let [a,b]=randomPair(letters);
+                rules.push(s=>s[a]!==s[b]);
+                ruleText.push(a+" 与 "+b+" 必须相反");
             }
 
             if(type===2){
-                let [a,b]=randomPair(keys);
+                let [a,b]=randomPair(letters);
+                rules.push(s=>s[a]===s[b]);
+                ruleText.push(a+" 与 "+b+" 必须相同");
+            }
+
+            if(type===3){
+                let [a,b]=randomPair(letters);
                 let val=solution[b];
                 rules.push(s=>!s[a]||s[b]===val);
                 ruleText.push("如果 "+a+" 开启，则 "+b+" 必须"+(val?"开启":"关闭"));
             }
 
-            if(type===3){
+            if(type===4){
                 let need=Object.values(solution).filter(v=>v).length;
                 rules.push(s=>Object.values(s).filter(v=>v).length===need);
                 ruleText.push("必须恰好有 "+need+" 个开启");
             }
         }
 
-        success=uniqueCheck();
+        if(uniqueCheck()) return;
     }
+
+    generateLevel();
 }
 
-/* 唯一解 */
 function uniqueCheck(){
     let keys=Object.keys(switches);
     let total=1<<keys.length;
@@ -331,14 +392,17 @@ function randomPair(arr){
     return [a,b];
 }
 
-/* UI */
+/* ========= UI ========= */
+
 function render(){
     const grid=document.getElementById("grid");
     grid.innerHTML="";
 
     for(let key in switches){
+
         let div=document.createElement("div");
         div.className="switch";
+
         div.onclick=()=>{
             if(gameFinished) return;
             switches[key]=!switches[key];
@@ -388,16 +452,11 @@ function update(){
 
 function nextLevel(){
     level++;
+    saveLevel();   // 保存当前进度
     document.getElementById("level").innerText=level;
     document.getElementById("modal").style.display="none";
     gameFinished=false;
-
-    if(level<=5){
-        loadFixedLevel();
-    }else{
-        generateRandomLevel();
-    }
-
+    generateLevel();
     resetUI();
     render();
 }
@@ -407,11 +466,12 @@ function resetUI(){
     document.getElementById("bar").style.width="0%";
 }
 
-/* 启动 */
-loadFixedLevel();
+/* ========= 启动 ========= */
+
+loadLevel();      // 读取缓存
+generateLevel();  // 根据缓存关卡随机生成规则
 render();
 
 </script>
-
 </body>
 </html>
