--- a/switch.html
+++ b/switch.html
@@ -9,8 +9,9 @@
 /* ===== 全局 ===== */
 body{
     margin:0;
-    width:100vw;
-    height:100vh;
+    padding:0;
+    width:100%;
+    height:100%;
     overflow:hidden;
     font-family:"Orbitron", "Segoe UI", monospace;
     background:linear-gradient(160deg,#0a0f18,#0d1117 40%,#070b12);
